# jarvis

./: .env.example  .gitignore  README.md  build.bat  docker-compose.yaml  docker-compose.yml  explain_to_amir.txt  jarvis.bat  pyproject.toml
jarvis/: __main__.py  cli.py  controller.py  main_controller.py
jarvis/codegen/: controller.py  prompts.py  service.py  types.py
jarvis/codegeneration/: controller.py
jarvis/git/: gitignores.py  gitscanner.py  service.py  types.py
jarvis/helper/: agent_output_parser.py  base_controller.py  change_dir.py  cmd_dirs_to_json.py  cmd_prompt.py  db.py  embedding.py  menu.py  string_to_dict.py  vector_db.py
jarvis/helper/models/: coding_model.py  conversation_model.py  internal_model.py  model_selector.py  music_model.py
jarvis/index_project/: agent.py  controller.py  prompt.py  service.py
jarvis/music/: controller.py  prompts.py  service.py
jarvis/project_template/: controller.py  prompt.py  tools.py  types.py
jarvis/python/: service.py
jarvis/unity/: global_vars.py  service.py  types.py
jarvis/youtube/: service.py
tests/: __init__.py
volumes/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG  LOG.old.1732879363518991
volumes/milvus/rdb_data_meta_kv/: 000009.sst  IDENTITY  LOG  LOG.old.1732879363444733  MANIFEST-000010
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/: a75314ac-c8e4-4ad4-af6b-af000290f632
