[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["Irlen Turlykhanov <irlen.turlykhanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.3"
python-dotenv = "^1.0.1"
langchain-anthropic = "^0.2.3"
langchain-openai = "^0.2.2"
langgraph = "^0.2.39"
psycopg2 = "^2.9.10"
prisma = "^0.15.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pytube = "^15.0.0"
pytubefix = "^8.2.0"
pymilvus = "^2.5.0"
langchain-core = "^0.3.21"
pyyaml = "^6.0.2"
cx-freeze = "^7.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jarvis = "jarvis.__main__:main"